runtime sender/receiver override; browserify

--- a/cr-reloader/index.html
+++ b/cr-reloader/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/bootstrap.css">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
-        <script src="lib/app.js"></script>
+        <script src="lib/bundle.js"></script>
     </head>
     <body>
       <div class="hero-unit">
