Replace deprecated chrome.socket API
...with chrome.sockets.tcpServer and chrome.sockets.tcp.

--- a/cr-reloader/index.html
+++ b/cr-reloader/index.html
@@ -14,9 +14,9 @@
          <p>
            <button id="restart" class="btn btn-primary btn-large">Restart</button>
            <select id="host">
-             <option value="127.0.0.1">lo - 127.0.0.1</option> 
+             <option value="127.0.0.1">127.0.0.1</option> 
            </select>
-           <input type="text" id="port" value="24601"/>
+           <label>Port: 24601</label>
          </p>
       </div>
       <pre id="logger"></pre>
